--- a/tutorials/explainer/lime_tabular_explainer.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "At a high level, explanations can be obtained from any XAI explanation algorithm in 3 steps:\n",
     "\n",
-    "1. Instantiate the Explainer class, which serves as an interface between the user and each explanation algorithm\n",
+    "1. Create an explainer via the `ExplainerFactory` class, which serves as the primary interface between the user and all XAI-supported explanation algorithms\n",
     "2. Build the explainer by calling the `build_explainer` method (which is implemented by any XAI explanation algorithm) and providing arguments that are specific to that algorithm\n",
     "3. Get explanations for some data instance by calling the `explain_instance` method (which is also common among all algorithms) and provoding arguments that are specific to that algorithm"
    ]
@@ -21,7 +21,7 @@
    "source": [
     "### Step 1: Import libraries\n",
     "\n",
-    "`xai.explainer.Explainer` is the main class that users of XAI interact with. `xai` contains some constants that are used to instantiate an `Explainer` object."
+    "`xai.explainer.ExplainerFactory` is the main class that users of XAI interact with. `xai` contains some constants that are used to instantiate an `AbstractExplainer` object."
    ]
   },
   {
@@ -42,12 +42,12 @@
     "# Set seed for reproducibility\n",
     "np.random.seed(123456)\n",
     "\n",
-    "# Set the path so that we can import the Explainer\n",
+    "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
-    "from xai.explainer import Explainer"
+    "from xai.explainer import ExplainerFactory"
    ]
   },
   {
@@ -101,12 +101,12 @@
    "source": [
     "### Step 3: Instantiate the explainer\n",
     "\n",
-    "This is where we instantiate the XAI `Explainer`. This class is in charge of loading a particular explanation algorithm and serving as its interface to the user. The user is required to provide one argument - the `domain`, which indicates the domain of the training data (e.g. `tabular` or `text`). The available domains can be found in `xai.DOMAIN`. Users can also select a particular explainer algorithm by providing the algorithm's name (registered in `xai.ALG`) to the `algorithm` parameter. If this argument is not provided, the `Explainer` class defaults to a pre-set algorithm for that domain which can be found in `xai/explainer/config.py`. \n",
+    "This is where we instantiate the XAI explainer. This `ExplainerFactory` class is in charge of loading a particular explanation algorithm. The user is required to provide one argument - the `domain`, which indicates the domain of the training data (e.g. `tabular` or `text`). The available domains can be found in `xai.DOMAIN`. Users can also select a particular explainer algorithm by providing the algorithm's name (registered in `xai.ALG`) to the `algorithm` parameter. If this argument is not provided, the `ExplainerFactory.get_explainer` method defaults to a pre-set algorithm for that domain which can be found in `xai/explainer/config.py`. \n",
     "\n",
     "We want to load the `LimeTabularExplainer`, so we provide `xai.DOMAIN.TABULAR` as the argument to `domain` and `xai.ALG.LIME` as the argument to `algorithm`. Note that `xai.ALG.LIME` is the default tabular explanation algorithm; hence this also works:\n",
     "\n",
     "```python\n",
-    "explainer = Explainer(domain=xai.DOMAIN.TABULAR)\n",
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR)\n",
     "```"
    ]
   },
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Instantiate LimeTabularExplainer via the Explainer interface\n",
-    "explainer = Explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.LIME)"
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.LIME)"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "source": [
     "# Load the saved explainer in a new Explainer instance\n",
     "\n",
-    "new_explainer = Explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.LIME)\n",
+    "new_explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.LIME)\n",
     "new_explainer.load_explainer('artefacts/lime_tabular.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
