--- a/tutorials/explainer/lime_text_explainer.ipynb
+++ b/tutorials/explainer/lime_text_explainer.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This tutorial demonstrates how to generate explanations using LIME's text explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
     "\n",
-    "1. Instantiate the Explainer class\n",
+    "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
     "3. Call `explain_instance`"
    ]
@@ -39,12 +39,12 @@
     "# Set seed for reproducibility\n",
     "np.random.seed(123456)\n",
     "\n",
-    "# Set the path so that we can import the Explainer\n",
+    "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
-    "from xai.explainer import Explainer"
+    "from xai.explainer import ExplainerFactory"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = Explainer(domain=xai.DOMAIN.TEXT)"
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TEXT)"
    ]
   },
   {
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label rec.sport.baseball\n",
+      "Label rec.sport.baseball 0\n",
       "{0: {'confidence': 0.9604247937223921,\n",
       "     'explanation': [{'feature': 'Mattingly', 'score': 0.1630204569197586},\n",
       "                     {'feature': 'njit', 'score': -0.05400846560032084},\n",
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label sci.med\n",
+      "Label sci.med 1\n",
       "{0: {'confidence': 0.006374625691451515,\n",
       "     'explanation': [{'feature': 'pain', 'score': -0.027402611439935602},\n",
       "                     {'feature': 'sr', 'score': 0.026176880833875864},\n",
@@ -297,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label soc.religion.christian\n",
+      "Label soc.religion.christian 2\n",
       "{0: {'confidence': 6.798212345437472e-05,\n",
       "     'explanation': [{'feature': 'Bible', 'score': -0.0023500809763485468},\n",
       "                     {'feature': 'Scripture', 'score': -0.0014344577715211986},\n",
@@ -367,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label soc.religion.christian\n",
+      "Label soc.religion.christian 2\n",
       "{0: {'confidence': 6.798212345437472e-05,\n",
       "     'explanation': [{'feature': 'Bible', 'score': -0.002291036085092343},\n",
       "                     {'feature': 'Heaven', 'score': -0.001386727909779096},\n",
@@ -392,7 +392,7 @@
    "source": [
     "# Load the saved explainer in a new Explainer instance\n",
     "\n",
-    "new_explainer = Explainer(domain=xai.DOMAIN.TEXT, algorithm=xai.ALG.LIME)\n",
+    "new_explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TEXT, algorithm=xai.ALG.LIME)\n",
     "new_explainer.load_explainer('artefacts/lime_text.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
