--- a/tutorials/explainer/lime_text_explainer_with_keras.ipynb
+++ b/tutorials/explainer/lime_text_explainer_with_keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XAI LIME Text Explainer with Keras\n",
+    "# XAI LIME Text ExplainerFactory with Keras\n",
     "\n",
     "This tutorial is similar to [lime_text_explainer.ipynb](lime_text_explainer.ipynb), but instead of a Naive Bayes model we attempt to generate explanations with a neural network implemented with Keras.\n",
     "\n",
@@ -14,7 +14,7 @@
     "\n",
     "Like with other XAI tutorials, the main steps for generating explanations are:\n",
     "\n",
-    "1. Instantiate the Explainer class\n",
+    "1. Instantiate the ExplainerFactory class\n",
     "2. Build the text explainer\n",
     "3. Call `explain_instance`"
    ]
@@ -67,12 +67,12 @@
     "# Set seed for reproducibility\n",
     "np.random.seed(123456)\n",
     "\n",
-    "# Set the path so that we can import the Explainer\n",
+    "# Set the path so that we can import the ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
-    "from xai.explainer import Explainer\n",
+    "from xai.explainer import ExplainerFactory\n",
     "\n",
     "###################################################\n",
     "# Set the directory to the GloVe embeddings here! #\n",
@@ -533,7 +533,7 @@
    "source": [
     "### Step 3: Instantiate the explainer\n",
     "\n",
-    "Here, we will use the LIME Text Explainer."
+    "Here, we will use the LIME Text ExplainerFactory."
    ]
   },
   {
@@ -542,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = Explainer(domain=xai.DOMAIN.TEXT)"
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TEXT)"
    ]
   },
   {
@@ -707,9 +707,9 @@
     }
    ],
    "source": [
-    "# Load the saved explainer in a new Explainer instance\n",
+    "# Load the saved explainer in a new ExplainerFactory instance\n",
     "\n",
-    "new_explainer = Explainer(domain=xai.DOMAIN.TEXT, algorithm=xai.ALG.LIME)\n",
+    "new_explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TEXT, algorithm=xai.ALG.LIME)\n",
     "new_explainer.load_explainer('artefacts/lime_text_keras.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
