--- a/tutorials/explainer/shap_tabular_explainer.ipynb
+++ b/tutorials/explainer/shap_tabular_explainer.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This tutorial demonstrates how to generate explanations using SHAP's Kernel Explainer implemented by the XAI library. Much of the tutorial overlaps with what is covered in the [LIME tabular tutorial](lime_tabular_explainer.ipynb). To recap, the main steps for generating explanations are:\n",
     "\n",
-    "1. Instantiate the Explainer class\n",
+    "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
     "3. Call `explain_instance`"
    ]
@@ -40,12 +40,12 @@
     "# Set seed for reproducibility\n",
     "np.random.seed(123456)\n",
     "\n",
-    "# Set the path so that we can import the Explainer\n",
+    "# Set the path so that we can import ExplainerFactory\n",
     "sys.path.append('../../')\n",
     "\n",
     "# Main XAI imports\n",
     "import xai\n",
-    "from xai.explainer import Explainer"
+    "from xai.explainer import ExplainerFactory"
    ]
   },
   {
@@ -133,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate LimeTabularExplainer via the Explainer interface\n",
-    "explainer = Explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.SHAP)"
+    "# Instantiate LimeTabularExplainer via the ExplainerFactory interface\n",
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.SHAP)"
    ]
   },
   {
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e38007be8870475a843605ede7165458",
+       "model_id": "88bf1c4723de4326b337712038c28066",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61db9a22f38c4f758f6993ba0bfb335f",
+       "model_id": "a1885fc8133b4f1c831a2e4b16cc5208",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +325,7 @@
    "source": [
     "# Load the saved explainer in a new Explainer instance\n",
     "\n",
-    "new_explainer = Explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.SHAP)\n",
+    "new_explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.SHAP)\n",
     "new_explainer.load_explainer('artefacts/shap_tabular.pkl')\n",
     "\n",
     "exp = new_explainer.explain_instance(\n",
@@ -343,6 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The SHAP model is pretty large, so remove it from disk\n",
     "os.remove('artefacts/shap_tabular.pkl')"
    ]
   }
