--- a/tutorials/explainer/lime_text_explainer_with_keras.ipynb
+++ b/tutorials/explainer/lime_text_explainer_with_keras.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Like with other XAI tutorials, the main steps for generating explanations are:\n",
     "\n",
-    "1. Instantiate the ExplainerFactory class\n",
+    "1. Get an explainer via the `ExplainerFactory` class\n",
     "2. Build the text explainer\n",
     "3. Call `explain_instance`"
    ]
