--- a/tutorials/formatter/hypertext_markup/HTML_Report_Generation.ipynb
+++ b/tutorials/formatter/hypertext_markup/HTML_Report_Generation.ipynb
@@ -237,15 +237,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//first-sample-report.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/first-sample-report.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/first-sample-report.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='first-sample-report'))\n",
-    "print(\"report generated : %s/first-sample-report.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='first-sample-report'))\n",
+    "print(\"report generated : %s/first-sample-report.html\" % os.getcwd())"
    ]
   },
   {
@@ -282,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x10ca82668>\n"
+      "<xai.formatter.report.base.Report object at 0x107d83518>\n"
      ]
     }
    ],
@@ -756,15 +755,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-section-only.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-section-only.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-with-data-section-only.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='sample-report-with-data-section-only'))\n",
-    "print(\"report generated : %s/sample-report-with-data-section-only.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='sample-report-with-data-section-only'))\n",
+    "print(\"report generated : %s/sample-report-with-data-section-only.html\" % os.getcwd())"
    ]
   },
   {
@@ -875,15 +873,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-and-feature-section.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-and-feature-section.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-with-data-and-feature-section.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='sample-report-with-data-and-feature-section'))\n",
-    "print(\"report generated : %s/sample-report-with-data-and-feature-section.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='sample-report-with-data-and-feature-section'))\n",
+    "print(\"report generated : %s/sample-report-with-data-and-feature-section.html\" % os.getcwd())"
    ]
   },
   {
@@ -1064,15 +1061,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-feature-training-section.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-feature-training-section.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-with-data-feature-training-section.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='sample-report-with-data-feature-training-section'))\n",
-    "print(\"report generated : %s/sample-report-with-data-feature-training-section.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='sample-report-with-data-feature-training-section'))\n",
+    "print(\"report generated : %s/sample-report-with-data-feature-training-section.html\" % os.getcwd())"
    ]
   },
   {
@@ -1547,15 +1543,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-feature-training-evaluation-section.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-feature-training-evaluation-section.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-with-data-feature-training-evaluation-section.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='sample-report-with-data-feature-training-evaluation-section'))\n",
-    "print(\"report generated : %s/sample-report-with-data-feature-training-evaluation-section.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='sample-report-with-data-feature-training-evaluation-section'))\n",
+    "print(\"report generated : %s/sample-report-with-data-feature-training-evaluation-section.html\" % os.getcwd())"
    ]
   },
   {
@@ -1786,15 +1781,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-final-with-summary.pdf F\n",
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-final-with-summary.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-final-with-summary.html\n"
      ]
     }
    ],
    "source": [
-    "from xai.formatter import PdfWriter\n",
-    "report.generate(writer=PdfWriter(name='sample-report-final-with-summary'))\n",
-    "print(\"report generated : %s/sample-report-final-with-summary.pdf\" % os.getcwd())"
+    "from xai.formatter import HtmlWriter\n",
+    "report.generate(writer=HtmlWriter(name='sample-report-final-with-summary'))\n",
+    "print(\"report generated : %s/sample-report-final-with-summary.html\" % os.getcwd())"
    ]
   },
   {
