added more comments on data tutorial jupyter notebook

--- a/tutorials/data_explorer/data_explorer.ipynb
+++ b/tutorials/data_explorer/data_explorer.ipynb
@@ -48,13 +48,15 @@
    "metadata": {},
    "source": [
     "## 1. Categorical\n",
-    "`xai.data.explorer.categorical`"
+    "Package `xai.data.explorer.categorical` analyzes categorical datasets and produces a frequency count for each categorical value. `categorical_analyzer` can feed in categorical values and return a `categorical_stats` object, which contains frequency count for each unique value. `labelled_categorical_analyzer` takes an additional argument *class* when fed values, and it generates frequency counts by class type."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -201,6 +203,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a helper function `plot_labelled_categorical_stats` to help visualize generated statistics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -234,9 +243,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we analyze *breast-quad* column based on *Class*. The frequency count for each breast-quad is summarized per class type, as shown in the figure on the left. `labelled_categorical_analyzer` also generates a combined frequency counts across all classes, as shown in the figure on the right."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -265,6 +283,13 @@
     "labelled_analyzer.feed_all(breast_data[feature_column].tolist(),breast_data[label_column].tolist())\n",
     "labelled_stats, all_stats = labelled_analyzer.get_statistics()\n",
     "plot_labelled_categorical_stats(labelled_stats, all_stats, label_column, feature_column)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, we can analyze *breast-quad* column but choose *menopause* as class. The frequency count for each breast-quad is summarized per menopause type."
    ]
   },
   {
@@ -307,7 +332,7 @@
    "source": [
     "## 2. Numerical\n",
     "\n",
-    "`xai.data.explorer.numerical` "
+    "Package `xai.data.explorer.numerical` analyzes numerical datasets and produces statistics analysis including *min*, *max*, *mean*, *median*, *sd*, *histogram* and *kde*. `numerical_analyzer` takes all inputted numerical values and generates an overall analysis, while `labelled_numerical_analyzer` takes numerical values and class labels to generate analysis per class type."
    ]
   },
   {
@@ -427,6 +452,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a helper function `plot_labelled_numerical_stats` to help visualize generated statistics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -487,6 +519,13 @@
     "    \n",
     "    _stats_df = pd.DataFrame.from_records(labelled_stats_table)\n",
     "    return _stats_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we show statistics of *sepal width (cm)* with respect to *Class*."
    ]
   },
   {
@@ -602,6 +641,13 @@
     "labelled_stats, all_stats = labelled_analyzer.get_statistics(extreme_value_percentile=[0,100],num_of_bins=15)\n",
     "_stats_df = plot_labelled_numerical_stats(labelled_stats, all_stats, label_column, feature_column)\n",
     "_stats_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is another example of statistics of *petal length (cm)* with respect to *Class*."
    ]
   },
   {
@@ -723,7 +769,8 @@
    "metadata": {},
    "source": [
     "## 3. Text\n",
-    "`xai.data.explorer.text`"
+    "\n",
+    "Package `xai.data.explorer.text` analyzes free text datasets and produces statistics analysis including *word count*, *character count*, *term frequency*, *document frequency* and *tfidf*. `text_analyzer` takes all inputted free text and generates an overall analysis, while `labelled_text_analyzer` takes free text and associated class labels to generate statistical analysis per class type."
    ]
   },
   {
@@ -753,6 +800,13 @@
     "    return text\n",
     "\n",
     "predefined_pattern = {'point':r'p\\d','number':r'\\d+','singlar':r'\\s\\w\\s'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a helper function `plot_labelled_text_stats` to help visualize generated statistics."
    ]
   },
   {
@@ -813,6 +867,13 @@
     "    _stats_df = pd.DataFrame.from_records(labelled_stats_table)\n",
     "    return _stats_df\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we show tfidf and term frequency by class type. Then we show tfidf and term frequency across all classes. "
    ]
   },
   {
@@ -1046,7 +1107,8 @@
    "metadata": {},
    "source": [
     "## 4. Datetime\n",
-    "`xai.data.explorer.datetime`"
+    "\n",
+    "Package `xai.data.explorer.datetime` analyzes date time datasets and produces frequency counts for a given resolution, which can be *year*, *month*, *day*, *weekday*, *hour*, *minute*, or *second*. `datetime_analyzer` takes all values and generates an overall analysis, while `labelled_datetime_analyzer` generates statistical analysis per class type."
    ]
   },
   {
@@ -1143,6 +1205,13 @@
    "source": [
     "from xai.data.explorer.datetime.labelled_datetime_analyzer import LabelledDatetimeDataAnalyzer\n",
     "from xai.data.constants import DatetimeResolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set the resolution to be *year* and *month*, so that input data will be grouped by their year and month."
    ]
   },
   {
@@ -1308,6 +1377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a helper function `plot_labelled_datetime_stats` to help visualize generated statistics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -1355,6 +1431,13 @@
     "        _plot(_class,labelled_stats[_class].frequency_count)\n",
     "        \n",
     "    _plot('all',all_stats.frequency_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The figures below show frequency counts by class based on *year* and *month* as configured previsouly."
    ]
   },
   {
@@ -1414,20 +1497,13 @@
    "source": [
     "plot_labelled_datetime_stats(labelled_stats, all_stats, label_column)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3(ml-mkt-training)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml-mkt-training"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1439,7 +1515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
