update tutorial text

--- a/tutorials/model_interpreter/model_interpreter.ipynb
+++ b/tutorials/model_interpreter/model_interpreter.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Model Interpreter via XAI\n",
     "\n",
-    "This tutorial demonstrates how to analysis a model's feature and trained model via xai.\n",
+    "In this tutorial, we use `xai` to analyze a trained model and its features.\n",
     "The tutorial contains 3 parts:\n",
     "- feature distribution analysis\n",
     "- trained model feature importance analysis\n",
@@ -90,9 +90,16 @@
    "source": [
     "### 1. Feature Analysis\n",
     "\n",
+    "Key parameters used in feature analysis:\n",
+    "- feature_names: a list of str, names of each feature.\n",
+    "- feature_types: a list of str, pre-defined type for each feature.\n",
+    "- train_x: numpy.dnarray, training data. Each row is a training sample, each column is a feature.\n",
+    "- labels: a list of str/int, the class label for each training sample.\n",
+    "- trained_model: model object, the trained model object.\n",
+    "\n",
     "#### Feature Distribution\n",
     "\n",
-    "To analysis the feature distribution, we need to import `xai.model_interpreter.FeatureInterpreter` to initialize a `FeatureInterpreter` and call the `get_feature_distribution()` function."
+    "To analyze the feature distribution, we need to import `xai.model_interpreter.FeatureInterpreter` to initialize a `FeatureInterpreter` and call the `get_feature_distribution()` function."
    ]
   },
   {
@@ -440,7 +447,7 @@
    "metadata": {},
    "source": [
     "#### Feature correlation\n",
-    "To analysis the feature correlction, we need to import `xai.model_interpreter.FeatureInterpreter` to initialize a `FeatureInterpreter` and call the `get_feature_correlation()` function. Same `FeatureInterpreter` object can be reused here for correlation analysis. \n",
+    "To analyze the feature correlction, we need to import `xai.model_interpreter.FeatureInterpreter` to initialize a `FeatureInterpreter` and call the `get_feature_correlation()` function. Same `FeatureInterpreter` object can be reused here for correlation analysis. \n",
     "\n",
     "In this sample, as all the features are numerical features, correlation are calculated using Pearson's testing as a default setup. And we use plot helper function to plot the heatmap for the correlation between all features."
    ]
