add comments for plotting

--- a/tutorials/model_interpreter/model_interpreter.ipynb
+++ b/tutorials/model_interpreter/model_interpreter.ipynb
@@ -436,10 +436,11 @@
     "sample_features = feature_names[:3]\n",
     "for feature_name in sample_features:\n",
     "    (label_feature_stats, all_feature_stats) = stats[feature_name]\n",
-    "    plotter.plot_labelled_numerical_stats(labelled_stats=label_feature_stats,\n",
-    "                                          all_stats=all_feature_stats,\n",
-    "                                          label_column='Class',\n",
-    "                                          feature_column=feature_name)"
+    "    \n",
+    "    plotter.plot_labelled_numerical_stats(labelled_stats=label_feature_stats, # stats for each class\n",
+    "                                          all_stats=all_feature_stats, # stats for all classes\n",
+    "                                          label_column='Class', # column name for label\n",
+    "                                          feature_column=feature_name) # column name for feature"
    ]
   },
   {
