update test and tutorial for formatter

--- a/tutorials/formatter/portable_document/pdf_report_generation.ipynb
+++ b/tutorials/formatter/portable_document/pdf_report_generation.ipynb
@@ -239,7 +239,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//first-sample-report.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/first-sample-report.pdf\n"
      ]
     }
@@ -284,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x10f33d518>\n"
+      "<xai.formatter.report.base.Report object at 0x124ab0e48>\n"
      ]
     }
    ],
@@ -759,7 +758,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-section-only.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-section-only.pdf\n"
      ]
     }
@@ -878,7 +876,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-and-feature-section.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-and-feature-section.pdf\n"
      ]
     }
@@ -1067,7 +1064,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-feature-training-section.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-feature-training-section.pdf\n"
      ]
     }
@@ -1395,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1546,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-with-data-feature-training-evaluation-section.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-with-data-feature-training-evaluation-section.pdf\n"
      ]
     }
@@ -1788,7 +1783,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-final-with-summary.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/portable_document/sample-report-final-with-summary.pdf\n"
      ]
     }
@@ -1823,7 +1817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
