--- a/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
+++ b/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x10695a7b8>\n"
+      "<xai.formatter.report.base.Report object at 0x125cdc860>\n"
      ]
     }
    ],
@@ -1844,7 +1844,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".//sample-report-final-with-summary-2.pdf F\n",
       "report generated : /Users/i062308/Development/Explainable_AI/tutorials/formatter/hypertext_markup/sample-report-final-with-summary-2.pdf\n"
      ]
     }
@@ -1879,7 +1878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
