moved data reformat step out from formatter

--- a/tutorials/formatter/portable_document/pdf_report_generation.ipynb
+++ b/tutorials/formatter/portable_document/pdf_report_generation.ipynb
@@ -283,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x124ab0e48>\n"
+      "<xai.formatter.report.base.Report object at 0x12b105748>\n"
      ]
     }
    ],
@@ -825,7 +825,7 @@
      "text": [
       "SAMPLE DATA FOR FEATURE IMPORTANCE\n",
       "==================================\n",
-      "<class 'list'> [[0.0457, 'Months_to_end'], [0.0437, 'Nth_Month'], [0.0281, 'Curr_Calendar_Month'], [0.0275, 'IC_0/ContactPostalCode-nil'], [0.0185, 'Agg_Curr_Num_IA_last45days'], [0.0175, 'IC_0/ContactPostalCode-94010'], [0.0169, 'IC_0/ContactPostalCode-95125'], [0.0169, 'Agg_BF_Num_IA_last360days'], [0.0165, 'IC_0/GenderCode-1'], [0.0138, 'Agg_BF_Num_IA_0/InteractionType_Ticket_Purchase_last360days']]\n"
+      "<class 'list'> [('Months_to_end', 0.0457), ('Nth_Month', 0.0437), ('Curr_Calendar_Month', 0.0281), ('IC_0/ContactPostalCode-nil', 0.0275), ('Agg_Curr_Num_IA_last45days', 0.0185), ('IC_0/ContactPostalCode-94010', 0.0175), ('IC_0/ContactPostalCode-95125', 0.0169), ('Agg_BF_Num_IA_last360days', 0.0169), ('IC_0/GenderCode-1', 0.0165), ('Agg_BF_Num_IA_0/InteractionType_Ticket_Purchase_last360days', 0.0138)]\n"
      ]
     }
    ],
@@ -835,7 +835,9 @@
     "### Feature Importance\n",
     "with open('./../sample_data/feature_importance.json', 'r') as f:\n",
     "    feature_importance = json.load(f)\n",
-    "    \n",
+    "##### Optional step: specified to data\n",
+    "feature_importance = [(score, name) for name, score in feature_importance]\n",
+    "\n",
     "print('SAMPLE DATA FOR FEATURE IMPORTANCE')\n",
     "print('==================================')\n",
     "print(type(feature_importance),feature_importance[:10])\n",
