--- a/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
+++ b/tutorials/formatter/hypertext_markup/html_report_generation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xai.formatter.report.base.Report object at 0x125cdc860>\n"
+      "<xai.formatter.report.base.Report object at 0x12a795048>\n"
      ]
     }
    ],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +844,7 @@
      "text": [
       "SAMPLE DATA FOR FEATURE IMPORTANCE\n",
       "==================================\n",
-      "<class 'list'> [[0.0457, 'Months_to_end'], [0.0437, 'Nth_Month'], [0.0281, 'Curr_Calendar_Month'], [0.0275, 'IC_0/ContactPostalCode-nil'], [0.0185, 'Agg_Curr_Num_IA_last45days'], [0.0175, 'IC_0/ContactPostalCode-94010'], [0.0169, 'IC_0/ContactPostalCode-95125'], [0.0169, 'Agg_BF_Num_IA_last360days'], [0.0165, 'IC_0/GenderCode-1'], [0.0138, 'Agg_BF_Num_IA_0/InteractionType_Ticket_Purchase_last360days']]\n"
+      "<class 'list'> [('Months_to_end', 0.0457), ('Nth_Month', 0.0437), ('Curr_Calendar_Month', 0.0281), ('IC_0/ContactPostalCode-nil', 0.0275), ('Agg_Curr_Num_IA_last45days', 0.0185), ('IC_0/ContactPostalCode-94010', 0.0175), ('IC_0/ContactPostalCode-95125', 0.0169), ('Agg_BF_Num_IA_last360days', 0.0169), ('IC_0/GenderCode-1', 0.0165), ('Agg_BF_Num_IA_0/InteractionType_Ticket_Purchase_last360days', 0.0138)]\n"
      ]
     }
    ],
@@ -854,7 +854,9 @@
     "### Feature Importance\n",
     "with open('./../sample_data/feature_importance.json', 'r') as f:\n",
     "    feature_importance = json.load(f)\n",
-    "    \n",
+    "##### Optional step: specified to data\n",
+    "feature_importance = [(score, name) for name, score in feature_importance]\n",
+    "\n",
     "print('SAMPLE DATA FOR FEATURE IMPORTANCE')\n",
     "print('==================================')\n",
     "print(type(feature_importance),feature_importance[:10])\n",
@@ -888,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -924,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1018,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -1627,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -1807,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -1835,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
