update on data type checking and rendering

--- a/tests/Report Render .ipynb
+++ b/tests/Report Render .ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -300,14 +300,11 @@
       "Warning: the feature [PassengerId] is suspected to be identifierable feature. \n",
       "[Examples]: [1, 2, 3, 4, 5]\n",
       "\n",
-      "Warning: the feature [Name] is suspected to be identifierable feature. \n",
-      "[Examples]: ['Braund, Mr. Owen Harris', 'Cumings, Mrs. John Bradley (Florence Briggs Thayer)', 'Heikkinen, Miss. Laina', 'Futrelle, Mrs. Jacques Heath (Lily May Peel)', 'Allen, Mr. William Henry']\n",
-      "\n",
       "Warning: the feature [Ticket] is suspected to be identifierable feature. \n",
       "[Examples]: ['A/5 21171', 'PC 17599', 'STON/O2. 3101282', '113803', '373450']\n",
       "\n",
       "Warning: the feature [Cabin] is suspected to be identifierable feature. \n",
-      "[Examples]: [nan, 'C85', nan, 'C123', nan]\n",
+      "[Examples]: ['NAN', 'C85', 'NAN', 'C123', 'NAN']\n",
       "\n",
       "['Pclass',\n",
       " 'Name',\n",
@@ -315,9 +312,7 @@
       " 'Age',\n",
       " 'SibSp',\n",
       " 'Parch',\n",
-      " 'Ticket',\n",
       " 'Fare',\n",
-      " 'Cabin',\n",
       " 'Embarked',\n",
       " 'Birthday']\n",
       "['categorical',\n",
@@ -326,23 +321,22 @@
       " 'numerical',\n",
       " 'categorical',\n",
       " 'categorical',\n",
-      " 'text',\n",
       " 'numerical',\n",
-      " 'text',\n",
       " 'categorical',\n",
       " 'datetime']\n",
       "{'Age': {'structured': 'attribute', 'type': 'numerical', 'used': True},\n",
       " 'Birthday': {'structured': 'attribute', 'type': 'datetime', 'used': True},\n",
-      " 'Cabin': {'structured': 'attribute', 'type': 'Text', 'used': True},\n",
+      " 'Cabin': {'structured': 'attribute', 'type': 'Key', 'used': True},\n",
       " 'Embarked': {'structured': 'attribute', 'type': 'categorical', 'used': True},\n",
       " 'Fare': {'structured': 'attribute', 'type': 'numerical', 'used': True},\n",
       " 'Name': {'structured': 'attribute', 'type': 'Text', 'used': True},\n",
       " 'Parch': {'structured': 'attribute', 'type': 'categorical', 'used': True},\n",
+      " 'PassengerId': {'structured': 'attribute', 'type': 'Key', 'used': True},\n",
       " 'Pclass': {'structured': 'attribute', 'type': 'categorical', 'used': True},\n",
       " 'Sex': {'structured': 'attribute', 'type': 'categorical', 'used': True},\n",
       " 'SibSp': {'structured': 'attribute', 'type': 'categorical', 'used': True},\n",
       " 'Survived': {'structured': 'attribute', 'type': 'label', 'used': True},\n",
-      " 'Ticket': {'structured': 'attribute', 'type': 'Text', 'used': True}}\n"
+      " 'Ticket': {'structured': 'attribute', 'type': 'Key', 'used': True}}\n"
      ]
     }
    ],
@@ -401,7 +395,7 @@
     "            return len(x.split(' '))\n",
     "        if col_data.dtypes == object:\n",
     "            if len(col_data.unique()) > len(col_data)*threshold:\n",
-    "                if median(col_data.apply(_get_token_number))>5:\n",
+    "                if median(col_data.apply(_get_token_number))>3:\n",
     "                    return True\n",
     "                else:\n",
     "                    return False\n",
@@ -451,11 +445,7 @@
     "        \n",
     "        else:\n",
     "            print('Warning: the feature [%s] is suspected to be identifierable feature. \\n[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-    "            if col_data.dtypes == object:\n",
-    "                feature['text'].append(column)\n",
-    "                valid_feature_names.append(column)\n",
-    "                valid_feature_types.append(DATATYPE.FREETEXT)\n",
-    "                meta[column] = {'type': 'Text', 'used': True, 'structured':'attribute'}               \n",
+    "            meta[column] = {'type': 'Key', 'used': True, 'structured':'attribute'}               \n",
     "\n",
     "    return feature, valid_feature_names, valid_feature_types, meta\n",
     "\n",
